--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
 	    <artifactId>aws-java-sdk-s3</artifactId>
 	    <version>1.11.502</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+	<dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-core</artifactId>
+	    <version>2.24.5</version>
+	    <scope>test</scope>
+	</dependency>
   	
   </dependencies>
   
