--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 	    <version>2.24.5</version>
 	    <scope>test</scope>
 	</dependency>
+	
+	
   	
   </dependencies>
   
@@ -42,6 +44,20 @@
                 <target>1.6</target>
             </configuration>
         </plugin>
+        
+        <!-- Cobertura -->
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>2.7</version>
+        </plugin>
+        <!-- Cobertura -->
+        <plugin>
+	        <groupId>org.codehaus.mojo</groupId>
+	        <artifactId>cobertura-maven-plugin</artifactId>
+	        <version>2.7</version>
+      	</plugin>
+      
     </plugins>
 </build>
   
@@ -57,19 +73,13 @@
 			<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
 		</configuration>
 	</plugin>
-
+	
 	<plugin>
-		<groupId>org.codehaus.mojo</groupId>
-		<artifactId>cobertura-maven-plugin</artifactId>
-		<version>2.6</version>
-		<configuration>
-			<formats>
-				<format>html</format>
-				<format>xml</format>
-			</formats>
-		</configuration>
-	</plugin>
-
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+    </plugin>
+      
    </plugins>
 </reporting>
 
