--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,15 @@
         <artifactId>cobertura-maven-plugin</artifactId>
         <version>2.7</version>
     </plugin>
+    
+    <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-checkstyle-plugin</artifactId>
+         <version>3.0.0</version>
+         <configuration>
+             <configLocation>checkstyle.xml</configLocation>
+         </configuration>
+    </plugin>
       
    </plugins>
 </reporting>
